--- a/cool.ipynb
+++ b/cool.ipynb
@@ -2,10 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium import webdriver\n",
     "import json\n",
     "import time\n",
@@ -32,25 +36,66 @@
     "# Navigate to the specific page (search query)\n",
     "driver.get('https://pony.town/')\n",
     "\n",
-    "# Allow time for the page to load and the session to activate\n",
-    "time.sleep(20)\n",
+    "# Allow time for the page to load\n",
+    "WebDriverWait(driver, 20).until(EC.presence_of_element_located((By.CLASS_NAME, 'btn-success')))\n",
     "\n",
-    "# Scroll down the page\n",
-    "driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "# Locate the button by its class name and text content\n",
+    "button = WebDriverWait(driver, 20).until(\n",
+    "    EC.element_to_be_clickable((By.XPATH, \"//button[contains(@class, 'btn-success') and contains(., 'Play')]\"))\n",
+    ")\n",
     "\n",
-    "# Allow time for the page to load additional content\n",
+    "# Click the button\n",
+    "button.click()\n",
+    "\n",
     "time.sleep(5)\n",
+    "\n",
+    "# Press the 'O' key\n",
+    "webdriver.ActionChains(driver).send_keys('O').perform()\n",
+    "\n",
+    "# JavaScript code to use MutationObserver to watch for new chat lines and extract details\n",
+    "mutation_observer_script = \"\"\"\n",
+    "const chatLines = [];\n",
+    "const observer = new MutationObserver((mutations) => {\n",
+    "    mutations.forEach((mutation) => {\n",
+    "        mutation.addedNodes.forEach((node) => {\n",
+    "            if (node.classList && node.classList.contains('chat-line')) {\n",
+    "                const time = node.querySelector('.chat-line-timestamp').innerText;\n",
+    "                const name = node.querySelector('.chat-line-name-content').innerText;\n",
+    "                const message = node.querySelector('.chat-line-message').innerText;\n",
+    "                chatLines.push({ time, name, message });\n",
+    "            }\n",
+    "        });\n",
+    "    });\n",
+    "});\n",
+    "observer.observe(document.body, { childList: true, subtree: true });\n",
+    "window.getChatLines = () => chatLines;\n",
+    "\"\"\"\n",
+    "\n",
+    "# Execute the JavaScript code\n",
+    "driver.execute_script(mutation_observer_script)\n",
+    "\n",
+    "# Monitor for new chat lines for 30 seconds\n",
+    "time.sleep(30)\n",
+    "\n",
+    "# Retrieve the chat lines collected by the MutationObserver\n",
+    "chat_lines = driver.execute_script(\"return window.getChatLines();\")\n",
+    "\n",
+    "# Save the chat lines to a JSON file\n",
+    "with open('chat_lines.json', 'w', encoding='utf-8') as file:\n",
+    "    json.dump(chat_lines, file, ensure_ascii=False, indent=4)\n",
     "\n",
     "# Save the HTML content to a file\n",
     "html_content = driver.page_source\n",
     "with open('page_content.html', 'w', encoding='utf-8') as file:\n",
     "    file.write(html_content)\n",
     "\n",
+    "\n",
     "# Take a screenshot as proof of session reuse\n",
     "driver.save_screenshot('session_with_cookies.png')\n",
     "\n",
     "# Quit the browser\n",
-    "driver.quit()"
+    "driver.quit()\n",
+    "\n"
    ]
   },
   {
