--- a/cool.ipynb
+++ b/cool.ipynb
@@ -59,7 +59,17 @@
     "    mutations.forEach((mutation) => {\n",
     "        mutation.addedNodes.forEach((node) => {\n",
     "            if (node.classList && node.classList.contains('chat-line')) {\n",
-    "                const time = node.querySelector('.chat-line-timestamp').innerText;\n",
+    "                const now = new Date();\n",
+    "                const time = new Intl.DateTimeFormat('en-US', {\n",
+    "                    timeZone: 'America/New_York',\n",
+    "                    year: 'numeric',\n",
+    "                    month: '2-digit',\n",
+    "                    day: '2-digit',\n",
+    "                    hour: '2-digit',\n",
+    "                    minute: '2-digit',\n",
+    "                    second: '2-digit',\n",
+    "                    hour12: false\n",
+    "                }).format(now);\n",
     "                const name = node.querySelector('.chat-line-name-content').innerText;\n",
     "                const message = node.querySelector('.chat-line-message').innerText;\n",
     "                chatLines.push({ time, name, message });\n",
@@ -70,6 +80,7 @@
     "observer.observe(document.body, { childList: true, subtree: true });\n",
     "window.getChatLines = () => chatLines;\n",
     "\"\"\"\n",
+    "\n",
     "\n",
     "# Execute the JavaScript code\n",
     "driver.execute_script(mutation_observer_script)\n",
